[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.508966, 0.477159 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Bomb" type="Area2D" parent="Sprite"]
collision_layer = 1088
collision_mask = 440

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Bomb"]
position = Vector2( 0.485563, 0.520246 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.936442, -0.936442 )
rect = Rect2( 1, 1, 1, 1 )
[connection signal="area_entered" from="Sprite/Bomb" to="." method="_on_Bomb_area_entered"]
[connection signal="area_shape_entered" from="Sprite/Bomb" to="." method="_on_Bomb_area_shape_entered"]
[connection signal="body_shape_entered" from="Sprite/Bomb" to="." method="_on_Bomb_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
